--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -1,1 +1,48 @@
-<p>login works!</p>
+<div class="login-container">
+  <div class="login-card">
+
+    <h2>Welcome Back !</h2>
+    <p class="subtitle">Login to continue</p>
+
+    <div *ngIf="successMsg" class="success-box">
+      {{ successMsg }}
+    </div>
+
+    <div *ngIf="errorMsg" class="error-box">
+      {{ errorMsg }}
+    </div>
+
+    <form #loginForm="ngForm" (ngSubmit)="onLogin()">
+
+      <div class="form-group">
+        <label>Username</label>
+        <input
+          type="text"
+          [(ngModel)]="loginData.username"
+          name="username"
+          required
+        />
+      </div>
+
+      <div class="form-group">
+        <label>Password</label>
+        <input
+          type="password"
+          [(ngModel)]="loginData.password"
+          name="password"
+          required
+        />
+      </div>
+
+      <button class="login-btn" type="submit" [disabled]="!loginForm.valid">
+        Login
+      </button>
+    </form>
+
+    <div class="links">
+      <a routerLink="/register">Create Account</a>
+      <a routerLink="/change-password">Change Password</a>
+    </div>
+
+  </div>
+</div>
