Created header and footer components  inside shared-component folder and make the responsive

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,8 +1,9 @@
 <section class="contact">
-  <h2>Contact</h2>
+  <h2>Contact Us</h2>
+
   <div class="contact-content">
-    <div>
-      <p>Get in touch with us for more information or to join our community.</p>
+    <div class="contact-text">
+      <p>Get in touch with us to learn more, ask questions, or explore how you can become a part of our growing community.</p>
     </div>
 
     <div class="form">
