--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -12,7 +12,7 @@
 
     <div class="card">
       <div class="icon-title">
-        <img src="assets/Expert-talk.png" alt="Expert-Talks icon" />
+        <img src="assets/Expert-talk.png" alt="Expert Talks icon" />
         <h3>Expert Talks</h3>
       </div>
       <p>Insights from industry professionals and experienced developers.</p>
