--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-home></app-home>
-<app-about></app-about>
-<app-services></app-services>
-<app-contact></app-contact>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
